REPL-139 Added test cases for in-memory queue. Updated with review comments and bug fixes.